--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": ""
+    "dev": "nodemon src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   }
 }
